Moves build and docker images to latest Java 21 (#3620)
This moves the build and docker images to latest Java 21. Note that the
release still uses JDK 11, so that the core jar can compile to Java 1.6
for historical reporters.

Signed-off-by: Adrian Cole <adrian@tetrate.io>